Implement games logic
