# internal/ttto/runner/http/handler_auth.go
@@ -15,14 +15,14 @@ import (
 func (s *server) setupAuthRoutes(g *gin.RouterGroup) {
 	authG := g.Group("/auth")
 	{
-		authG.POST("/register", s.Register)
-		authG.POST("/login", s.Login)
-		authG.GET("/logout", s.Register)
+		authG.POST("/registration", s.registration)
+		authG.POST("/login", s.login)
+		authG.GET("/logout", s.logout)
 	}
 
 }
 
-// Register godoc
+// register godoc
 //
 //	@Summary		register new user
 //	@Description	creates new user
@@ -35,32 +35,32 @@ func (s *server) setupAuthRoutes(g *gin.RouterGroup) {
 //	@Failure		409		{object}	http.Response
 //	@Failure		422		{object}	http.Response
 //	@Failure		500		{object}	http.Response
-//	@Router			/api/v1/auth/register [post]
-func (s *server) Register(c *gin.Context) {
+//	@Router			/api/auth/registration [post]
+func (s *server) registration(c *gin.Context) {
 	var u UserRequest
 	if err := c.ShouldBindJSON(&u); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
+		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
 			"message": err,
 		})
 		return
 	}
 
-	if err := s.service.CreateUser(c.Request.Context(), domain.User{
+	if err := s.service.CreateUser(c.Request.Context(), &domain.User{
 		Username: u.Username,
 		Password: u.Password,
 	}); err != nil {
 		var valErr *service.ErrValidation
 		switch {
 		case errors.As(err, &valErr):
-			c.JSON(http.StatusUnprocessableEntity, gin.H{
+			c.AbortWithStatusJSON(http.StatusUnprocessableEntity, gin.H{
 				"message": valErr,
 			})
 		case errors.Is(err, service.ErrUserAlreadyExists):
-			c.JSON(http.StatusConflict, gin.H{
+			c.AbortWithStatusJSON(http.StatusConflict, gin.H{
 				"message": err,
 			})
 		default:
-			c.JSON(http.StatusInternalServerError, gin.H{
+			c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
 				"message": http.StatusText(http.StatusInternalServerError),
 			})
 		}
@@ -72,7 +72,7 @@ func (s *server) Register(c *gin.Context) {
 	})
 }
 
-// Login godoc
+// login godoc
 //
 //	@Summary		login to the app
 //	@Description	logins to the application
@@ -85,17 +85,17 @@ func (s *server) Register(c *gin.Context) {
 //	@Failure		409		{object}	http.Response
 //	@Failure		422		{object}	http.Response
 //	@Failure		500		{object}	http.Response
-//	@Router			/api/v1/auth/login [post]
-func (s *server) Login(c *gin.Context) {
+//	@Router			/api/auth/login [post]
+func (s *server) login(c *gin.Context) {
 	var u UserRequest
 	if err := c.ShouldBindJSON(&u); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
+		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
 			"message": err,
 		})
 		return
 	}
 
-	token, err := s.service.AuthorizeUser(c.Request.Context(), domain.User{
+	token, err := s.service.AuthorizeUser(c.Request.Context(), &domain.User{
 		Username: u.Username,
 		Password: u.Password,
 	})
@@ -103,16 +103,16 @@ func (s *server) Login(c *gin.Context) {
 		var valErr *service.ErrValidation
 		switch {
 		case errors.As(err, &valErr):
-			c.JSON(http.StatusUnprocessableEntity, gin.H{
+			c.AbortWithStatusJSON(http.StatusUnprocessableEntity, gin.H{
 				"message": valErr,
 			})
 		case errors.Is(err, service.ErrUserNotFound), errors.Is(err, service.ErrInvalidCredentials):
-			c.JSON(http.StatusUnprocessableEntity, gin.H{
+			c.AbortWithStatusJSON(http.StatusUnprocessableEntity, gin.H{
 				"message": service.ErrInvalidCredentials,
 			})
 		default:
 			fmt.Println(err)
-			c.JSON(http.StatusInternalServerError, gin.H{
+			c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
 				"message": http.StatusText(http.StatusInternalServerError),
 			})
 		}
@@ -125,5 +125,15 @@ func (s *server) Login(c *gin.Context) {
 	})
 }
 
-func (s *server) Logout(c *gin.Context) {
+// login godoc
+//
+//	@Summary		logout from the app
+//	@Description	logouts from the application
+//	@Tags			auth
+//	@Produce		json
+//	@Success		200	{object}	http.Response
+//	@Failure		500	{object}	http.Response
+//	@Router			/api/auth/logout [get]
+func (s *server) logout(c *gin.Context) {
+	c.SetCookie("token", "", -1, "/", "localhost", false, true)
 }
