# internal/ttto/runner/http/server.go
@@ -8,19 +8,23 @@ import (
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 
+	"github.com/qerdcv/ttto/internal/domain"
+	"github.com/qerdcv/ttto/internal/eventst"
 	"github.com/qerdcv/ttto/internal/ttto/service"
 )
 
 type server struct {
 	*gin.Engine
 
+	es      *eventst.EventStream[*domain.Game]
 	service *service.Service
 }
 
-func newServer(service *service.Service) *server {
+func newServer(service *service.Service, es *eventst.EventStream[*domain.Game]) *server {
 	s := &server{
 		Engine:  gin.Default(),
 		service: service,
+		es:      es,
 	}
 
 	s.Use(s.authMiddleware())
@@ -41,16 +45,26 @@ func newServer(service *service.Service) *server {
 }
 
 func (s *server) setupRoutes() {
-	g := s.Group("api/v1")
+	g := s.Group("api")
 	{
-		g.GET("/ping", s.Ping)
+		g.GET("/ping", s.ping)
 		g.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	}
 
 	s.setupAuthRoutes(g)
+	s.setupGameHandlers(g)
 }
 
-func (s *server) Ping(c *gin.Context) {
+// ping godoc
+//
+//	@Summary		pong
+//	@Description	pong
+//	@Tags			healthcheck
+//	@Produce		json
+//	@Success		200	{object}	http.Response
+//	@Failure		500	{object}	http.Response
+//	@Router			/api/v1/ping [get]
+func (s *server) ping(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{
 		"message": "pong",
 	})
